# ChangeLog for sys-apps/file
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.136 2007/04/07 10:04:55 vapier Exp $

*file-4.20-r1 (07 Apr 2007)

  07 Apr 2007; Mike Frysinger <vapier@gentoo.org>
  +files/file-4.20-disable-regex.patch, +file-4.20-r1.ebuild:
  Workaround from upstream for crappy regex handling in newer glibcs #173368.

  25 Mar 2007; Mike Frysinger <vapier@gentoo.org> file-4.20.ebuild:
  Grab patch from upstream for non-portable regex flag #172146.

  23 Mar 2007; Tobias Scherbaum <dertobi123@gentoo.org> file-4.20.ebuild:
  Stable on ppc wrt bug #171452.

  23 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> file-4.20.ebuild:
  Stable on sparc wrt security #171452

  23 Mar 2007; Christian Faulhammer <opfer@gentoo.org> file-4.20.ebuild:
  stable x86, security bug 171452

  22 Mar 2007; Steve Dibb <beandog@gentoo.org> ChangeLog:
  amd64 stable, security bug 171452

  21 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org> file-4.20.ebuild:
  Stable on alpha bug #171452

  21 Mar 2007; Markus Rothe <corsair@gentoo.org> file-4.20.ebuild:
  Stable on ppc64; bug #171452

  20 Mar 2007; Jeroen Roovers <jer@gentoo.org> file-4.20.ebuild:
  Stable for HPPA (bug #171452).

  19 Mar 2007; Mike Frysinger <vapier@gentoo.org> file-4.20.ebuild:
  Fix building on ppc64 by renaming the __unused define #171178.

*file-4.20 (02 Mar 2007)

  02 Mar 2007; Mike Frysinger <vapier@gentoo.org> +file-4.20.ebuild:
  Version bump.

  13 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> file-4.19.ebuild:
  Stable on MIPS; bug #165717

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> file-4.19.ebuild:
  Stable on ppc64; bug #165717

  10 Feb 2007; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 165717

  08 Feb 2007; Luis Medinas <metalgod@gentoo.org> file-4.19.ebuild:
  Stable on amd64. Bug #165717.

  07 Feb 2007; Jeroen Roovers <jer@gentoo.org> file-4.19.ebuild: