@@ -1,41 +1,13 @@
 AUX file-4.15-libtool.patch 561 RMD160 f2b9f4c93f199ab3145d70816b3c624349af97a0 SHA1 6e2c1cd8dee4d022c35a056e94a4030af1f4b1fa SHA256 badb8261dad5df39bac1d6a6da1668eb8a2ff0b01c2c80baa8abfe07fd99681d
-MD5 26f26c3f7caf28f0bdb9dbb6fe83c254 files/file-4.15-libtool.patch 561
-RMD160 f2b9f4c93f199ab3145d70816b3c624349af97a0 files/file-4.15-libtool.patch 561
-SHA256 badb8261dad5df39bac1d6a6da1668eb8a2ff0b01c2c80baa8abfe07fd99681d files/file-4.15-libtool.patch 561
 AUX file-4.19-init-file.patch 695 RMD160 6a21f0b9d871f25d2c61124b6771a65bb27e4dd6 SHA1 fd8545e73a3005bb64f9d39a50ce8e73a1c9491f SHA256 c9716ff10bf361bc12a81be890a10355ba129e833abe9bafa909cc358b65c3d4
-MD5 fbb72f2eacc870783913faa303db638b files/file-4.19-init-file.patch 695
-RMD160 6a21f0b9d871f25d2c61124b6771a65bb27e4dd6 files/file-4.19-init-file.patch 695
-SHA256 c9716ff10bf361bc12a81be890a10355ba129e833abe9bafa909cc358b65c3d4 files/file-4.19-init-file.patch 695
 AUX file-4.19-wcwidth.patch 219 RMD160 702d913b8b124eac9a1ffd6733720fcddbe16b4d SHA1 7a027a5b2ae05ef088e33a42acd74e886db668b2 SHA256 d2a4479f13b8adb7a02d805696983e75471cdb8c20eb2f3198e4e5fe248ddbd0
-MD5 df35478eb129e3863a9add5ada88d291 files/file-4.19-wcwidth.patch 219
-RMD160 702d913b8b124eac9a1ffd6733720fcddbe16b4d files/file-4.19-wcwidth.patch 219
-SHA256 d2a4479f13b8adb7a02d805696983e75471cdb8c20eb2f3198e4e5fe248ddbd0 files/file-4.19-wcwidth.patch 219
 AUX file-4.20-disable-regex.patch 638 RMD160 c70bfd868ee4339360e0cc6ea12e58c1b91bccb4 SHA1 65b42c3f4e63e39539f64f4f00fa53a18301ab99 SHA256 80b7010cd9e62daf6f7dd34e3424669223868ad59bab09c0a6767f2e922a7e9e
-MD5 5f9312c7f56e19cf995c2713ffc89834 files/file-4.20-disable-regex.patch 638
-RMD160 c70bfd868ee4339360e0cc6ea12e58c1b91bccb4 files/file-4.20-disable-regex.patch 638
-SHA256 80b7010cd9e62daf6f7dd34e3424669223868ad59bab09c0a6767f2e922a7e9e files/file-4.20-disable-regex.patch 638
 DIST file-4.19.tar.gz 546805 RMD160 d8dbf2686eaef5bb1cb9467198acd3a4c5735ca7 SHA1 035c2ddf46e1a80e8ddec8e74601d9d2ee4f6ce3 SHA256 697250abdbcaf850728791a475a917d84287f7e2d67bab90021775db600c4d85
 DIST file-4.20.tar.gz 548393 RMD160 ff4f1a677a6377df3d7925ab4e36fec71dd3ebe7 SHA1 af5878e3c61c725a82ff185fcef5b631ad8468ab SHA256 c0810fb3ddb6cb73c9ff045965e542af6e3eaa7f2995b3037181766d26d5e6e7
+DIST file-4.21.tar.gz 549938 RMD160 c8cfee27ba7a033bae355e458921eac39913b1e0 SHA1 4a919572fed1896212c2d7f41f841845efc1287a SHA256 6f5644d56cc603138533158076a6cb41cd33c33d27e5310cb76cb6576151ca67
 DIST patch-4.20-REG_STARTEND 1119 RMD160 30ca934188bafe6fbe3967c1aee980bd7710b0b1 SHA1 4470ba5651e7a41ce8b30114a750a4479b6efe66 SHA256 add836395ad07c2b60697eb5f9b24a2dbf26746c7b4b18330afe4ca147b759e2
 EBUILD file-4.19-r1.ebuild 1484 RMD160 592cbc0cd091ecd92e1d2837b783c18b45b77c03 SHA1 0a68b6db75ca42f526a221cb342caed05a4b7cd4 SHA256 981ff8a0dbc5dcfe25bc3d30c2720b2a1ce24c0155658d814967e7801e180af4
-MD5 22d31b682ca8ec4b3b62376363516c88 file-4.19-r1.ebuild 1484
-RMD160 592cbc0cd091ecd92e1d2837b783c18b45b77c03 file-4.19-r1.ebuild 1484
-SHA256 981ff8a0dbc5dcfe25bc3d30c2720b2a1ce24c0155658d814967e7801e180af4 file-4.19-r1.ebuild 1484
 EBUILD file-4.20-r1.ebuild 1843 RMD160 37314d0f0f6ac5e1e53e1edd68ca2d3e98a9120e SHA1 ff625da8c9971595de61f029a08b639476564aea SHA256 a5d75d511fa2326f0dde03b9e9cb62850bde76b3992d3003d451fd086bbfd2e2
-MD5 b9d052372186b7f688970ca0c797cc22 file-4.20-r1.ebuild 1843
-RMD160 37314d0f0f6ac5e1e53e1edd68ca2d3e98a9120e file-4.20-r1.ebuild 1843
-SHA256 a5d75d511fa2326f0dde03b9e9cb62850bde76b3992d3003d451fd086bbfd2e2 file-4.20-r1.ebuild 1843
-MISC ChangeLog 16321 RMD160 54c55c1c8963336f42522d3fcf3f86aab3152468 SHA1 a94882cac6cf66f942338fc5c77db1121a1b0066 SHA256 4c98221a38bd9bc50717a811ea3d4b82cdff4bfce73176e048205b9772a89ee9
-MD5 858ea9dc1d5133530d10519556b28fcb ChangeLog 16321
-RMD160 54c55c1c8963336f42522d3fcf3f86aab3152468 ChangeLog 16321
-SHA256 4c98221a38bd9bc50717a811ea3d4b82cdff4bfce73176e048205b9772a89ee9 ChangeLog 16321
+EBUILD file-4.21.ebuild 1468 RMD160 4cd93065df97e8629f741bae625b1b9c5932da94 SHA1 b4f736149fe44c97624ab0e5f4d19955249c35a3 SHA256 acfa1ae3809acdf9b080e44839c8f257c7524554839b83485346e9027153a589
+MISC ChangeLog 16433 RMD160 33a1d9a16d8d3e12a5e5eefcd98630eed9ac6d8e SHA1 27a8f46c91dba55f25b5efec63f90c75e4f897a8 SHA256 dbf49b2fbe5fd72304d8c1730624682b602f561bbf1537e45655a4f4f4b4eb9f
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
-MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
-SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-MD5 448defd1880eceee616ce2ec9cc867c1 files/digest-file-4.19-r1 229
-RMD160 d3860786831538a1c89e86dd98b75115afe865f2 files/digest-file-4.19-r1 229
-SHA256 03615d11f17c1aa0b2abbe73afd5788082368c641678e2b36e320aecb4c90313 files/digest-file-4.19-r1 229
-MD5 9c2718a04b0e390a5c07b0a04b0d8302 files/digest-file-4.20-r1 473
-RMD160 8b41b9719c079c8a152ba589448066766c881cee files/digest-file-4.20-r1 473
-SHA256 84f57e5b1daeada3ebfe1d7f6722ed6980119222741f01257d494354d62d1d82 files/digest-file-4.20-r1 473
