@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.136 2007/04/07 10:04:55 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.137 2007/05/24 22:33:37 vapier Exp $
+
+*file-4.21 (24 May 2007)
+
+  24 May 2007; Mike Frysinger <vapier@gentoo.org> +file-4.21.ebuild:
+  Version bump.
 
 *file-4.20-r1 (07 Apr 2007)
 
